--- a/template-parts/_wp.scss
+++ b/template-parts/_wp.scss
@@ -90,6 +90,7 @@ blockquote.is-style-large {
   margin-right: calc(25% - 25vw);
   width: auto;
   max-width: 1000%;
+  clear: both;
 }
 
 // If the first element on the post is a left aligned image then we can't
@@ -154,6 +155,16 @@ blockquote.is-style-large {
 
   @media only screen and (max-width: 660px) {
     margin: 0;
+  }
+}
+
+.alignfull .wp-block-column {
+  &:first-child {
+    margin-left: 1rem;
+  }
+
+  &:last-child {
+    margin-right: 1rem;
   }
 }
 
